create current controller, create midlewares validateSignIn
