# routes/auth/auth.js
@@ -3,18 +3,19 @@ const current = require("../../controllers/current");
 const singup = require("../../controllers/auth/singup");
 const singin = require("../../controllers/auth/singin");
 const logout = require("../../controllers/auth/logout");
-const refresh = require("../../controllers/auth/refresh");
-const dailyMetrics = require("../../controllers/auth/dailyMetrics");
+const dailyMetrics = require("../../controllers/dailyMetrics");
 const auth = require("../../middlewares/auth");
+const validateSignUp = require("../../middlewares/validateSignUp");
+const schemaRegister = require("../../middlewares/schemaRegister");
+const validateSignIn = require("../../middlewares/validateSignIn");
+const schemaLogin = require("../../middlewares/schemaLogin");
 const router = express.Router();
 
-router.post("/users/register", singup);
-router.post("/users/login", singin);
+router.post("/users/register",validateSignUp(schemaRegister), singup);
+router.post("/users/login",validateSignIn(schemaLogin), singin);
 router.post("/users/logout", auth, logout);
-router.get("/users", current);
-router.post("/users/verify", refresh);
-//private
-router.patch("/users/dailyMetrics", dailyMetrics);
-// router.patch('/users/avatars', auth, upload.single("avatar"), handlerJpg, editAvatar);
-// router.get('/users/verify/:verificationToken', verifyCode);
+router.get("/users",auth, current);
+
+router.patch("/users/dailyMetrics",auth, dailyMetrics);
+
 module.exports = router;
